[gd_scene load_steps=5 format=3 uid="uid://d1hyply7t8dwp"]

[ext_resource type="Texture2D" uid="uid://bw3n4pjp2lhil" path="res://assets/ui/heart.png" id="2_bltfa"]
[ext_resource type="Script" path="res://src/ui/player_ui.gd" id="2_gc4e6"]
[ext_resource type="Texture2D" uid="uid://bfw8ukkkqrd2o" path="res://assets/ui/firepower.png" id="3_5vc7e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqike"]
bg_color = Color(0.0313726, 0.133333, 0.372549, 0.752941)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.109804, 0.713726, 1, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 24
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_bottom = 16.0
shadow_color = Color(0.00392157, 0.0705882, 0.34902, 0.313726)
shadow_size = 8

[node name="PlayerUI" type="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 452.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xqike")
script = ExtResource("2_gc4e6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_bltfa")
expand_mode = 2

[node name="LabelHealth" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LabelFirepower" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_5vc7e")
expand_mode = 2
